--- a/apps/pwa/src/components/Livestream/styles.module.scss
+++ b/apps/pwa/src/components/Livestream/styles.module.scss
@@ -1232,6 +1232,7 @@
   max-height: 100%;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
 }
 
 .noVideo {
